unpackaged/main/default/objects/psa_RPG_Owner__c/psa_RPG_Owner__c.object-meta.xml
<CustomObject>
    <description>These are the RPG Owners and the delegation of authority.</description>
    <label>RPG Owner</label>
    <nameField>
        <displayFormat>RPGO-{00000}</displayFormat>
        <label>RPG Owner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPG Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>