unpackaged/main/default/objects/psa_RPG_Owner__c/fields/Approval_Object__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object__c</fullName>
    <label>Approval Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Resource Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>