unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Comments__c.field-meta.xml
<CustomField>
    <fullName>psa_Comments__c</fullName>
    <label>Comments</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>