unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Commercial_Model__c.field-meta.xml
<CustomField>
    <fullName>psa_Commercial_Model__c</fullName>
    <label>Commercial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Time and Materials</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prepaid T&amp;M / Drawdown</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>