unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_FF_Max__c.field-meta.xml
<CustomField>
    <fullName>psa_FF_Max__c</fullName>
    <label>FF Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>