unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_FF_Min__c.field-meta.xml
<CustomField>
    <fullName>psa_FF_Min__c</fullName>
    <label>FF Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>