unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Group__c.field-meta.xml
<CustomField>
    <fullName>psa_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>RPG Owners</relationshipLabel>
    <relationshipName>RPG_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>