unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Group_ID_Chain__c.field-meta.xml
<CustomField>
    <fullName>psa_Group_ID_Chain__c</fullName>
    <formula>psa_Group__r.pse__Group_ID_Chain__c</formula>
    <label>Group ID Chain</label>
    <type>Text</type>
</CustomField>