unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Hierarchy_Depth__c.field-meta.xml
<CustomField>
    <fullName>psa_Hierarchy_Depth__c</fullName>
    <formula>psa_Region__r.pse__Hierarchy_Depth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>