unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Hours_Max__c.field-meta.xml
<CustomField>
    <fullName>psa_Hours_Max__c</fullName>
    <label>Hours Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>