unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Max_Rate_Discount__c.field-meta.xml
<CustomField>
    <fullName>psa_Max_Rate_Discount__c</fullName>
    <label>Max Rate Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>