unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>psa_Owner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner/Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RPG_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>