unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Practice__c.field-meta.xml
<CustomField>
    <fullName>psa_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>RPG Owners</relationshipLabel>
    <relationshipName>RPG_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>