unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Practice_ID_Chain__c.field-meta.xml
<CustomField>
    <fullName>psa_Practice_ID_Chain__c</fullName>
    <formula>psa_Practice__r.pse__Practice_ID_Chain__c</formula>
    <label>Practice ID Chain</label>
    <type>Text</type>
</CustomField>