unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Project_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Record_Type__c</fullName>
    <label>Project Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>