unpackaged/main/default/objects/psa_RPG_Owner__c/fields/psa_Region_ID_Chain__c.field-meta.xml
<CustomField>
    <fullName>psa_Region_ID_Chain__c</fullName>
    <formula>psa_Region__r.pse__Region_ID_Chain__c</formula>
    <label>Region ID Chain</label>
    <type>Text</type>
</CustomField>