unpackaged/main/default/objects/psa_RPG_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Approval_Object__c</columns>
    <columns>NAME</columns>
    <columns>psa_Region__c</columns>
    <columns>psa_Practice__c</columns>
    <columns>psa_Group__c</columns>
    <columns>psa_Role_Persona__c</columns>
    <columns>psa_Engagement_Type__c</columns>
    <columns>psa_Commercial_Model__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>psa_Hours_Max__c</columns>
    <columns>psa_FF_Min__c</columns>
    <columns>psa_FF_Max__c</columns>
    <columns>psa_Min_Rate_Discount__c</columns>
    <columns>psa_Max_Rate_Discount__c</columns>
    <columns>psa_Owner_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Object__c</field>
        <operation>equals</operation>
        <value>Resource Request</value>
    </filters>
    <label>All</label>
</ListView>